kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cashdrawer-service
  namespace: cashdrawer
  labels:
    app: cashdrawer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: cashdrawer
---
apiVersion: v1
kind: Service
metadata:
  name: cashdrawer-nodeport
  namespace: cashdrawer
  labels:
    app: cashdrawer
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: cashdrawer
